# fullstack-omics

./: .gitignore  .gitmodules  LICENSE  README.md  manifest.yaml
autonomous-scRNAseq/: .gitignore  ATTRIBUTION.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
autonomous-scRNAseq/config/: instruments.yaml  protocol_params.yaml  readiness.yaml  reagents.yaml
autonomous-scRNAseq/flashseq/: __init__.py  params.py
autonomous-scRNAseq/flashseq/automation/: __init__.py  backends.py  deck.py  picogreen.py  qc.py  workflow.py
autonomous-scRNAseq/flashseq/manual/: __init__.py  render.py  wiring.py
autonomous-scRNAseq/flashseq/ops/: __init__.py  operator.py
autonomous-scRNAseq/flashseq/procurement/: __init__.py  bom.py  channels.py  connectivity.py  controller_kit.py
autonomous-scRNAseq/flashseq/readiness/: __init__.py  rhodamine.py
autonomous-scRNAseq/flashseq/result/: __init__.py  analysis.py  pipeline.py
autonomous-scRNAseq/references/: architecture.md  automation.md  procurement.md  protocol_stages.md  readiness.md  workflow_states.md
autonomous-scRNAseq/scripts/: _bootstrap.py  generate_analysis.py  render_manual.py  run_all.py  run_automation.py  run_procurement.py  run_readiness.py
autonomous-scRNAseq/scrnaseq/: __init__.py  params.py
autonomous-scRNAseq/scrnaseq/automation/: __init__.py  qc.py  workflow.py
autonomous-scRNAseq/scrnaseq/manual/: __init__.py  render.py
autonomous-scRNAseq/scrnaseq/ops/: __init__.py  operator.py
autonomous-scRNAseq/scrnaseq/procurement/: __init__.py  bom.py  channels.py
autonomous-scRNAseq/scrnaseq/readiness/: __init__.py  simulation.py
autonomous-scRNAseq/scrnaseq/result/: __init__.py  analysis.py  pipeline.py
autonomous-scRNAseq/tests/: test_end_to_end.py
autonomous-scWGS/: .gitignore  ATTRIBUTION.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
autonomous-scWGS/autoscwgs/: __init__.py  params.py
autonomous-scWGS/autoscwgs/automation/: __init__.py  backends.py  deck.py  qc.py  qubit.py  workflow.py
autonomous-scWGS/autoscwgs/manual/: __init__.py  render.py  wiring.py
autonomous-scWGS/autoscwgs/ops/: __init__.py  operator.py
autonomous-scWGS/autoscwgs/procurement/: __init__.py  bom.py  channels.py  connectivity.py  controller_kit.py
autonomous-scWGS/config/: instruments.yaml  protocol_params.yaml  readiness.yaml  reagents.yaml
autonomous-scWGS/references/: analysis.md  architecture.md  automation.md  procurement.md  protocol_stages.md  source_map.md  workflow_states.md
autonomous-scWGS/scripts/: _bootstrap.py  generate_analysis.py  render_manual.py  run_all.py  run_automation.py  run_input_registration.py  run_procurement.py  run_readiness.py  run_sorting.py
autonomous-scWGS/tests/: test_end_to_end.py
(+8 files in other folders)
