[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "scrnaseq-skill"
version = "0.1.0"
description = "Method-agnostic scRNA-seq workflow-state simulator and analysis handoff."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "di" }]
keywords = ["scRNA-seq", "single-cell", "analysis", "simulation", "workflow"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["scrnaseq", "scrnaseq.procurement", "scrnaseq.manual", "scrnaseq.automation", "scrnaseq.readiness", "scrnaseq.ops", "scrnaseq.result"]

[tool.setuptools.package-data]
"*" = ["../config/*.yaml"]
